# imagenes_cotas_dimensiones

./: .gitignore  nano_banana_cotas._local.ipynb  nano_banana_cotas.ipynb  nano_banana_cotas_dameo.ipynb  nano_banana_cotas_drive.ipynb  nano_banana_cotas_platos_ducha.ipynb  pyproject.toml  querries.sql
