[tool.poetry]
package-mode = false
name = "notebook"
version = "0.1.0"
description = ""
authors = ["diego <diego.delapuente@leroymerlin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.3.3"
numpy = "^2.3.4"
google-cloud-bigquery-storage = "^2.33.1"
ipywidgets = "^8.1.7"
openpyxl = "^3.1.5"
nbformat = "^5.10.4"
kpf = "^0.1.22"
tdqm = "^0.0.1"
pypdf = "^6.1.3"
openai = "^2.6.1"
google-genai = "^1.47.0"
gspread = "^6.2.1"  
Pillow = "^11"
google-api-python-client = "^2.187.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"