[tool.poetry]
package-mode = false
name = "notebook"
version = "0.1.0"
description = ""
authors = ["diego <diego.delapuente@leroymerlin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
google-auth = "^2.27.0"
google-auth-oauthlib = "^1.2.0"
google-cloud-bigquery = "^3.0.0"
google-genai = "^0.1.0"
Pillow = "^10.0.0"
kpf = "^0.1.22"
tdqm = "^0.0.1"
pypdf = "^6.1.3"
google-api-python-client = "^2.187.0"
db-dtypes = "^1.5.0"
matplotlib = "^3.10.8"
sentence-transformers = "^5.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"